# intro-to-bazel

./: Justfile  README.md  script.sh
1-minimal/: BUILD.bazel  WORKSPACE  hello.go
2-deps/: BUILD.bazel  WORKSPACE
2-deps/pkg/server/: BUILD.bazel  http.go
3-gazelle/: BUILD.bazel  WORKSPACE
3-gazelle/pkg/server/: http.go
3.5-test/: BUILD.bazel  WORKSPACE
3.5-test/pkg/greeter/: name.go  name_test.go
4-docker/: BUILD.bazel  WORKSPACE
4-docker/cmd/hello/: hello.go
4-docker/pkg/server/: BUILD.bazel
5-grpc/: BUILD.bazel  WORKSPACE  go.mod  go.sum
5-grpc/api/: BUILD.bazel  hello.proto
5-grpc/cmd/hello/: hello.go
5-grpc/pkg/greeter/: BUILD.bazel  name.go
5-grpc/pkg/server/: BUILD.bazel  grpc.go  http.go
