load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hello.go"],
    importpath = "github.com/mt165/intro-to-bazel",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/server:go_default_library",
    ],
)

go_binary(
    name = "hello",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mt165/intro-to-bazel
gazelle(name = "gazelle")  # Makes a target here (the root), so that we can run gazelle (as //:gazelle)
