# == GAZELLE ==

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mt165/intro-to-bazel
gazelle(
    # Makes a target here (the root), so that we can run gazelle (as //:gazelle)
    name = "gazelle",
)

# == DOCKER ==

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

# `build` will make the tarball in the sandbox (won't, eg, load into local daemon)
# `run` will (docker) load into the local daemon and run
# FIXME currently broken (19/7/22) can't find CPP toolchain
# - looks like it's https://github.com/bazelbuild/bazel/issues/15673, which means we're waiting on an update to rules_go or rules_docker to move their rules_cc pin forwards
# - think https://github.com/bazelbuild/bazel/issues/10134 is a red herring
go_image(
    name = "hello_image",
    binary = "//cmd/hello:hello",
    visibility = ["//visibility:public"],
    goos = "linux", goarch = "arm64",
)

container_push(
    name = "hello_push",
    format = "Docker",
    image = ":hello_image",
    registry = "docker.io",
    repository = "mtinside/intro-to-bazel",
    tag = "doxlon",
)
