# == GAZELLE ==

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mt165/intro-to-bazel
gazelle(
    # Makes a target here (the root), so that we can run gazelle (as //:gazelle)
    name = "gazelle",
)

# == DOCKER ==

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# `build` will make the tarball in the sandbox (won't, eg, load into local daemon)
# `run` will (docker) load into the local daemon and run
go_image(
    name = "hello_image",
    binary = "//cmd/hello:hello",
    visibility = ["//visibility:public"],
)

container_push(
    name = "hello_push",
    format = "Docker",
    image = ":hello_image",
    registry = "docker.io",
    repository = "mtinside/intro-to-bazel",
    tag = "doxlon",
)
