load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "grpc.go",
        "http.go",
    ],
    importpath = "github.com/mt165/intro-to-bazel/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//pkg/greeter:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
